--- a/4번/4.html
+++ b/4번/4.html
@@ -2,3 +2,6 @@
 <div class="box"></div>
 <button class="btn"></button>
 <span class="text"></span>
+<script>
+  const btnelement = document.querySelector(".btn");
+</script>
