--- a/5번/5.html
+++ b/5번/5.html
@@ -2,3 +2,6 @@
 <div id="box"></div>
 <button id="btn"></button>
 <span id="text"></span>
+<script>
+  const headingelement = document.querySelector("#heaidng");
+</script>
